--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,13 +19,14 @@ jobs:
     - name: Download Linux artifact
       uses: actions/download-artifact@v3
       with:
-        name: linuxBuild.zip
-    - name: Upload linuxBuild.zip to release
+        name: linuxBuild
+    - name: Upload linuxBuild to release
       uses: svenstaro/upload-release-action@2.5.0
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         tag: ${{ github.ref_name }}
-        file: linuxBuild.zip
+        file: linuxBuild
+        asset_name: Linux64.zip
         overwrite: false
 
   release-mac:
@@ -37,10 +38,11 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: macBuild.zip
-    - name: Upload macBuild.zip to release
+    - name: Upload macBuild to release
       uses: svenstaro/upload-release-action@2.5.0
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         tag: ${{ github.ref_name }}
-        file: macBuild.zip
+        file: macBuild
+        asset_name: Mac64.zip
         overwrite: false
