--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         tag: ${{ github.ref_name }}
-        file: linuxBuild.zip
+        file: linuxBuild
         asset_name: Linux64.zip
         overwrite: false
 
@@ -43,6 +43,6 @@ jobs:
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         tag: ${{ github.ref_name }}
-        file: macBuild.zip
+        file: macBuild
         asset_name: Mac64.zip
         overwrite: false
