--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,16 +19,17 @@ jobs:
     - name: Download Linux artifact
       uses: actions/download-artifact@v3
       with:
+        path: build
         name: linuxBuild
-    - name: list
-      run:
-        ls
+    - uses: montudor/action-zip@v1
+      with:
+        args: zip -qq -r build.zip build
     - name: Upload linuxBuild to release
       uses: svenstaro/upload-release-action@2.5.0
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         tag: ${{ github.ref_name }}
-        file: linuxBuild
+        file: build.zip
         asset_name: Linux64.zip
         overwrite: false
 
@@ -40,12 +41,16 @@ jobs:
     - name: Download Mac artifact
       uses: actions/download-artifact@v3
       with:
+        path: build
         name: macBuild
+    - uses: montudor/action-zip@v1
+      with:
+        args: zip -qq -r build.zip build
     - name: Upload macBuild to release
       uses: svenstaro/upload-release-action@2.5.0
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         tag: ${{ github.ref_name }}
-        file: macBuild
+        file: build.zip
         asset_name: Mac64.zip
         overwrite: false
