--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
         name: linuxBuild
     - uses: montudor/action-zip@v1
       with:
-        args: zip -qq -r build.zip build
+        args: zip -qq -r build.zip build/*
     - name: Upload linuxBuild to release
       uses: svenstaro/upload-release-action@2.5.0
       with:
@@ -45,7 +45,7 @@ jobs:
         name: macBuild
     - uses: montudor/action-zip@v1
       with:
-        args: zip -qq -r build.zip build
+        args: zip -qq -r build.zip build/*
     - name: Upload macBuild to release
       uses: svenstaro/upload-release-action@2.5.0
       with:
